src/test/deca/context/invalid/created/unary_exp/minus_boolean.deca
// Description :
//    test minus unaire avec un boolean
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.37) Type opérande : boolean , attendu : int pour l’opérateur -

{
int a = -false;
}